@@ -28,6 +28,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.core.GrantedAuthorities;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -52,6 +53,8 @@ import static org.springframework.security.test.web.servlet.setup.SecurityMockMv
 @ContextConfiguration(classes = SecurityMockWithAuthoritiesMvcResultMatchersTests.Config.class)
 @WebAppConfiguration
 public class SecurityMockWithAuthoritiesMvcResultMatchersTests {
+
+	private static final String ROLE_CUSTOM = "ROLE_CUSTOM";
 
 	@Autowired
 	private WebApplicationContext context;
@@ -80,6 +83,12 @@ public class SecurityMockWithAuthoritiesMvcResultMatchersTests {
 				() -> this.mockMvc.perform(formLogin()).andExpect(authenticated().withAuthorities(grantedAuthorities)));
 	}
 
+	@Test
+	public void withAuthoritiesStringSupportsCustomAuthority() throws Exception {
+		this.mockMvc.perform(formLogin().user("custom"))
+			.andExpect(authenticated().withAuthorities(ROLE_CUSTOM, GrantedAuthorities.FACTOR_PASSWORD_AUTHORITY));
+	}
+
 	@Configuration
 	@EnableWebSecurity
 	@EnableWebMvc
@@ -89,7 +98,8 @@ public class SecurityMockWithAuthoritiesMvcResultMatchersTests {
 		UserDetailsService userDetailsService() {
 			// @formatter:off
 			UserDetails user = User.withDefaultPasswordEncoder().username("user").password("password").roles("ADMIN", "SELLER").build();
-			return new InMemoryUserDetailsManager(user);
+			UserDetails customAuthorityUser = User.withDefaultPasswordEncoder().username("custom").password("password").authorities(new CustomAuthority(ROLE_CUSTOM)).build();
+			return new InMemoryUserDetailsManager(user, customAuthorityUser);
 			// @formatter:on
 		}
 
@@ -101,6 +111,27 @@ public class SecurityMockWithAuthoritiesMvcResultMatchersTests {
 				return "ok";
 			}
 
+		}
+
+	}
+
+	/**
+	 * A custom {@link GrantedAuthority} for testing.
+	 *
+	 * @author Rob Winch
+	 * @since 7.0
+	 */
+	static class CustomAuthority implements GrantedAuthority {
+
+		private final String authority;
+
+		CustomAuthority(String authority) {
+			this.authority = authority;
+		}
+
+		@Override
+		public String getAuthority() {
+			return this.authority;
 		}
 
 	}
